--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@
   text-decoration: none;
   color: white;
   font-weight: 600;
+  display: flex;
+  gap:10px ;
+  align-items: center;
 }
 
 /* style  */
@@ -174,7 +177,6 @@
 
 .solution_conainer{
   display: flex;
-  justify-content: space-between;
   align-items: center;
   gap: 60px;
   padding: 120px;
@@ -200,5 +202,26 @@
   color: #001931;
   margin-bottom: 16px;
 }
+#get_early_access{
+  text-align: center;
+  padding: 0 120px 120px 120px;
+}
+
+.get_early_access_info{
+  background-color: #F7F6F2;
+  padding: 80px 40px;
+}
+#get_early_access h2{
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+#get_early_access p {
+  color: #627382;
+  margin-bottom: 24px;
+}
+
+
 
 
