--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@
   border: none;
   border-radius: 4px;
   height: 44px;
+  transition: ease-in .3s;
+  cursor: pointer;
 }
 
 .btn a{
@@ -33,6 +35,9 @@
   border-radius: 4px;
   height: 52px;
   align-items: center;
+  transition: ease-in .3s;
+  cursor: pointer;
+  box-shadow: 0 5px 10px #00193150;
 }
 
 .btn2 a{
@@ -43,6 +48,52 @@
   gap:10px ;
   align-items: center;
 }
+
+.btn3{
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 12.5px 16px;
+  border-radius: 4px;
+  transition: ease-in .3s;
+  cursor: pointer;
+}
+
+.btn3 a{
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+  display: flex;
+  gap:10px ;
+  align-items: center;
+}
+
+i{
+  color: white;
+}
+
+.btn:hover{
+  background-color: rgba(11, 11, 43, 0.88);
+  transform: scale(1.1);
+}
+
+.btn2:hover{
+  background-color: rgba(11, 11, 43, 0.88);
+  transform: scale(1.1);
+}
+
+.btn3:hover{
+  background-color: white;
+  color:rgba(11, 11, 43, 0.88);
+  transform: scale(1.1);
+}
+
+.btn3:hover a {
+  color:rgba(11, 11, 43, 0.88);
+}
+.btn3:hover .fa-circle-play{
+  color:rgba(11, 11, 43, 0.88);
+}
+
 
 /* style  */
 
@@ -55,6 +106,7 @@
 }
 .logo img {
   max-width:139px ;
+  cursor: pointer;
 }
 
 #navigation ul{
@@ -70,6 +122,9 @@
   text-decoration: none;
   color: black;
   font-weight: 500;
+  padding: 20px;
+  border-radius: 4px;
+  transition: ease .5s;
 } 
 
 #hero{
@@ -127,7 +182,7 @@
 
 .hero_buttonset{
   display: flex;
-  gap: 16px;
+  gap: 20px;
   justify-content: center;
 }
 
@@ -157,6 +212,7 @@
   padding: 24px;
   box-shadow:0 -10px 10px rgba(0, 0, 0, 0.10);
   border-radius: 8px;
+  transition: ease .3s;
 }
 
 .notes_card img{
@@ -212,6 +268,7 @@
 .get_early_access_info{
   background-color: #F7F6F2;
   padding: 80px 40px;
+  border-radius: 13px;
 }
 #get_early_access h2{
   font-size: 40px;
@@ -257,6 +314,16 @@ footer p{
 hr{
   border: 1px solid #62738250;
   margin-bottom: 30px;
+}
+
+.notes_card:hover{
+  transform: translateY(-20px);
+}
+
+.menu li:hover a{
+  background-color: #469165;
+  color: #ffffff;
+  padding: 20px;
 }
 
 
